correct toolbar button alignment on mobile

--- a/src/app/shared/toolbar-group/toolbar-group.component.scss
+++ b/src/app/shared/toolbar-group/toolbar-group.component.scss
@@ -6,6 +6,7 @@
 
 @media (max-width: $mobileBreakpoint) {
     :host {
+        text-align: unset;
         display: inline;
     }
 }
